--- a/python-devel/elixir/HISTORY
+++ b/python-devel/elixir/HISTORY
@@ -1,3 +1,6 @@
+2007-12-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.5.0
+
 2007-10-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.4.0
 
