--- a/x11/xpad/HISTORY
+++ b/x11/xpad/HISTORY
@@ -1,3 +1,6 @@
+2007-12-09 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.13
+
 2006-10-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.12, removed UPDATED
 
