kvm updated to 55

--- a/kernels/kvm/HISTORY
+++ b/kernels/kvm/HISTORY
@@ -1,3 +1,6 @@
+2007-12-09 David Brown <dmlb2000@gmail.com>
+	* DETAILS: updated to 55
+
 2007-11-22 David Brown <dmlb2000@gmail.com>
 	* DETAILS: updated to 53
 
