--- a/fonts/dejavu-ttf/HISTORY
+++ b/fonts/dejavu-ttf/HISTORY
@@ -1,3 +1,7 @@
+2007-12-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.22
+	* INSTALL: change from directory
+
 2007-10-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.21
 
