--- a/editors/poedit/HISTORY
+++ b/editors/poedit/HISTORY
@@ -1,3 +1,6 @@
+2007-12-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.8
+
 2007-11-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated to 1.3.7, using sig, cleaned up
 
