--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,7 @@
+2007-12-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: reverted spell to 0.94: 0.95 reports pieces
+	  as invalid and will continuously redownload them.
+
 2007-12-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.95
 
