--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2007-12-10 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 6.3.7-3
+
 2007-12-02 George Sherwood <george@beernabeer.com>
 	* ImageMagick-6.3.7-2.tar.bz2.sig: Updated sig.  Diff'ed
 	  changes and it appears upstream changed and didn't update 
