--- a/libs/soprano/HISTORY
+++ b/libs/soprano/HISTORY
@@ -1,3 +1,8 @@
+2007-12-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.99-rc2
+	* PREPARE: disable devel/stable test
+	  kde4 needs soprano2, and is the only user of soprano
+
 2007-12-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.98.0-rc1
 
