--- a/kde-apps/kphotoalbum/HISTORY
+++ b/kde-apps/kphotoalbum/HISTORY
@@ -1,3 +1,8 @@
+2007-112-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.1.0
+	  convert to gpg
+	* kphoto.gpg: added
+
 2007-11-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.2
 	* DEPENDS: use KDE_DEPENDS
