--- a/video/kino/HISTORY
+++ b/video/kino/HISTORY
@@ -1,3 +1,7 @@
+2007-12-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.0
+	* PRE_BUILD, ffmpeg-api.patch: deleted, no longer needed
+
 2007-12-09 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* PRE_BUILD, ffmpeg-api.patch: patch from kino cvs to support latest
 	  ffmpeg-svn api
