--- a/telephony/telepathy-glib/HISTORY
+++ b/telephony/telepathy-glib/HISTORY
@@ -1,3 +1,6 @@
+2007-12-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.0
+
 2007-10-02 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.6.0
 
