--- a/libs/libtasn1/HISTORY
+++ b/libs/libtasn1/HISTORY
@@ -1,3 +1,6 @@
+2007-12-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.2
+
 2007-09-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.1
 	* UP_TRIGGERS: removed
