--- a/devel/nasm/HISTORY
+++ b/devel/nasm/HISTORY
@@ -1,3 +1,6 @@
+2007-12-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.00, removed UPDATED
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
@@ -10,7 +13,7 @@
 2005-11-29 Seth Woolley <seth@tautology.org>
 	* DETAILS: MD5 -> SHA512
 
-2005-02-01 Ladislav hagara <hgr@vabo.cz>
+2005-02-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: BUILD_API=2, tested and added to grimoire [Bug 8108]
 
 2005-01-27 lem <catnip@web.de>
