--- a/windowmanagers/xmonad/HISTORY
+++ b/windowmanagers/xmonad/HISTORY
@@ -1,3 +1,9 @@
+2007-12-10 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS: updated spell to 0.5
+	* CONFIGURE, PRE_BUILD, ghc-6.8.patch: removed
+	* INSTALL, POST_REMOVE, PRE_RESURRECT, POST_RESURRECT:
+	  a set of procedures on package.conf
+
 2007-12-06 Alexander Tsamutali <astsmtl@gmail.com>
 	* PRE_BUILD, ghc-6.8.patch: fixed building with ghc-6.8
 
