transmission: updated to 0.96

--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,6 @@
+2007-12-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.96
+
 2007-12-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: reverted spell to 0.94: 0.95 reports pieces
 	  as invalid and will continuously redownload them.
