--- a/utils/beagle/HISTORY
+++ b/utils/beagle/HISTORY
@@ -1,3 +1,6 @@
+2007-12-11 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.3.1
+
 2007-12-04 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.30. Fixed SOURCE_URL.
 	* DEPENDS: Added optional_depends monodoc
