rrdtool updated to 1.2.26

--- a/net/rrdtool/HISTORY
+++ b/net/rrdtool/HISTORY
@@ -1,3 +1,6 @@
+2007-12-11 David Brown <dmlb2000@gmail.com>
+	* DETAILS: updated to 1.2.26
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
