--- a/net/rrdtool/HISTORY
+++ b/net/rrdtool/HISTORY
@@ -1,5 +1,5 @@
 2007-12-11 David Brown <dmlb2000@gmail.com>
-	* DETAILS: updated to 1.2.26
+	* DETAILS: updated to 1.2.26 and fixed url
 
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
