--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-12-11  Treeve Jelbert <treeve@sourcemage.org>
 	* kde4/kphotoalbum4: new spell, for kde4
+	* kde4/kgraphviewer4: new spell for kde4
 
 2007-12-09  Treeve Jelbert <treeve@sourcemage.org>
 	* database/tokyocabinet: new spell, successor to qdbm
