--- a/editors/poedit/HISTORY
+++ b/editors/poedit/HISTORY
@@ -1,3 +1,6 @@
+2007-12-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.9, cleaned up
+
 2007-12-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.8
 
