--- a/net/rrdtool/HISTORY
+++ b/net/rrdtool/HISTORY
@@ -1,3 +1,6 @@
+2007-12-11 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
+	* DETAILS: fixed WEB_SITE
+
 2007-12-11 David Brown <dmlb2000@gmail.com>
 	* DETAILS: updated to 1.2.26 and fixed url
 
