xorg-proto/xf86driproto/:
PRE_BUILD: added to fix dri failing

--- a/xorg-proto/xf86driproto/HISTORY
+++ b/xorg-proto/xf86driproto/HISTORY
@@ -1,3 +1,6 @@
+2007-12-12 Pol Vinogradov <vin.public@gmail.com>
+	* PRE_BUILD: added to fix dri failing
+
 2007-08-03  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: update description & short (automated)
 
