wm-addons/xmonad-contrib: new spell, third party extensions for xmonad

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-12 Alexander Tsamutali <astsmtl@gmail.com>
+	* wm-addons/xmonad-contrib: new spell, third party extensions for xmonad
+
 2007-12-11  Treeve Jelbert <treeve@sourcemage.org>
 	* kde4/kphotoalbum4: new spell, for kde4
 	* kde4/kgraphviewer4: new spell for kde4
