--- a/kde4/kdemultimedia4/HISTORY
+++ b/kde4/kdemultimedia4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-11  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.97.0
+
 2007-12-03  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.96.2
 
