--- a/kde4/kdewebdev4/HISTORY
+++ b/kde4/kdewebdev4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-11  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.97.0
+
 2007-05-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.90.1
 	  kde4 spell cloned from kde3 spell
