mesalib: lib64/ fix

--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,6 @@
+2007-12-13 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD: Change x86-64 configs to install libs in lib/, not lib64/
+
 2007-11-10 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 7.0.2
 	* INSTALL: using make install now
