--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,10 @@
+2007-12-13 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to 2.6.24-rc5-mm1
+	* info/patches/mm_patches/2.6.24-rc5-mm1: added
+	* info/patches/mm_patches/2.6.24-rc4-mm1: added
+	* latest.defaults: updated latest to patch-2.6.24-rc5
+	* info/patches/PRE_2_6/patch-2.6.24-rc5: added
+
 2007-12-03 David Brown <dmlb2000@gmail.com>  
 	* latest.defaults: updated latest to patch-2.6.24-rc4
 	* info/patches/PRE_2_6/patch-2.6.24-rc4: added
