--- a/crypto/qca2/HISTORY
+++ b/crypto/qca2/HISTORY
@@ -1,3 +1,9 @@
+2007-12-13 Treeve Jelbert <treeve@sourcemage.org>
+	* PRE_BUILD: added
+	  patch .pc file to name  it as QCA2.
+	  all software that I tested looks for QCA2
+	* DETAILS: PATCHLEVEL++
+
 2007-10-23 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.0.0. Fixed SOURCE_URL
 
