--- a/utils/hal-info/HISTORY
+++ b/utils/hal-info/HISTORY
@@ -1,3 +1,6 @@
+2007-12-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20071212
+
 2007-11-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: force_depends on older hal versions, needs 0.5.10+ #14079
 
