--- a/graphics-libs/poppler-data/HISTORY
+++ b/graphics-libs/poppler-data/HISTORY
@@ -1,3 +1,6 @@
+2007-12-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.0
+
 2007-10-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.1.1
 
