deprecate kde-apps/kimdaba

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2007-12-13  Treeve Jelbert <treeve@sourcemage.org>
+	* kde-apps/kimdaba: spell deprecated [replaced by kphotoalbum]
+
+2007-12-13  Treeve Jelbert <treeve@sourcemage.org>
 	* kde4/ktorrent4: new spell, for kde4
 	* kde4/kmldonkey4: new spell, for kde4
 
