--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -1,3 +1,6 @@
+2007-12-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.50
+
 2007-11-19 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: --with-pcre=included -> --with-libpcre=included
 
