--- a/crypto/ecryptfs-utils/HISTORY
+++ b/crypto/ecryptfs-utils/HISTORY
@@ -1,3 +1,6 @@
+2007-12-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 32
+
 2007-11-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 30
 	* PRE_BUILD: added
