--- a/collab/openldap/HISTORY
+++ b/collab/openldap/HISTORY
@@ -1,3 +1,6 @@
+2007-12-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.4.7
+
 2007-11-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.4.6
 	* UP_TRIGGERS: added
