--- a/python-devel/pysqlite/HISTORY
+++ b/python-devel/pysqlite/HISTORY
@@ -1,3 +1,7 @@
+2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.0, cleaned up,
+	  hash => gpg
+
 2007-07-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: upstream hash has changed
 
