--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2007-12-14 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to build 28711
+
 2007-12-08 George Sherwood <george@beernabeer.com>
 	* DETAILS, DEPENDS, BUILD, INSTALL: spell created
 
