--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: update snapshot to 4.3.4
+
 2007-12-05 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: updated spell to 4.3.3
 
