--- a/python-devel/bzr/HISTORY
+++ b/python-devel/bzr/HISTORY
@@ -1,3 +1,7 @@
+2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0,
+	  fixed WEB_SITE
+
 2007-10-24 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: added optional pycurl
 	  made bzrtools suggested to avoid a circular dependency
