--- a/gnome2-libs/pygtksourceview/HISTORY
+++ b/gnome2-libs/pygtksourceview/HISTORY
@@ -1,7 +1,9 @@
+2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: cleaned up, PATCHLEVEL++
+	* DEPENDS: fixed build, optional docbook-xsl when building the docs
+
 2007-09-21 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.0.0
 
 2007-09-09 Robin Cook <rcook@wyrms.net>
 	* DETAILS: initial spell - DETAILS, DEPENDS, HISTORY
-
-
