--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
+	* python-devel/bzr-gtk: new spell, pygtk2 GUI for Bazaar VCS
+
 2007-12-13  Treeve Jelbert <treeve@sourcemage.org>
 	* kde-apps/kimdaba: spell deprecated [replaced by kphotoalbum]
 
