--- a/graphics/fontforge/HISTORY
+++ b/graphics/fontforge/HISTORY
@@ -1,3 +1,6 @@
+2007-12-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20071210
+
 2007-09-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 20070917
 
