mesalib: depend on glproto

--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,6 @@
+2007-12-14 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: Needs glproto for build (GL headers).
+
 2007-12-13 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD: Change x86-64 configs to install libs in lib/, not lib64/
 
