--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
+	* latest.defaults: updated latest to patch-2.6.23.11
+	* info/patches/maintenance_patches/patch-2.6.23.11: added
+
 2007-12-14 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.23.10
 	* info/patches/maintenance_patches/patch-2.6.23.10: added
