--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.5.4
+
 2007-11-28 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 3.5.3
 
