--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,6 @@
+2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.24
+
 2007-12-01 George Sherwood <george@beernabeer.com>
 	* CONFIGURE: Added to query concerning animated png's
 	* PRE_BUILD: Added to apply patch from
