--- a/archive/p7zip/HISTORY
+++ b/archive/p7zip/HISTORY
@@ -1,3 +1,7 @@
+2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* PRE_BUILD: fixed man installation path
+
 2007-09-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.55
 
