--- a/audio-players/sonata/HISTORY
+++ b/audio-players/sonata/HISTORY
@@ -1,3 +1,8 @@
+2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++, cleaned up
+	* DEPENDS: cleaned up
+	* PRE_BUILD: fixed man installation path
+
 2007-11-23 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: Updated to version 1.3
 
