php-pear/suhosin.gpg: added gpg key for suhosin

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* php-pear/suhosin.gpg: added gpg key for suhosin
+
 2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel/bzr-gtk: new spell, pygtk2 GUI for Bazaar VCS
 
