--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* php-pear/suhosin.gpg: added gpg key for suhosin
+
 2007-12-09 George Sherwood <george@beernabeer.com>
 	* http/webkitgtk: New spell, web browser engine
 	* http/midori: New spell, broswer based in webkitgtk
