php: added suhosin patch

--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,9 @@
+2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* PRE_BUILD: added for suhosin
+	* CONFIGURE: added suhosin option
+	* DETAILS: added suhosin option
+	* DEPENDS: depends on libmcrypt not mcrypt
+
 2007-11-10 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 5.2.5. SECURITY_PATCH++
 
