--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,6 @@
+2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DEPENDS: added libmemcache, changed the look
+
 2007-09-10 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated Version to 1.4.18. SECURITY_PATCH++
 
