--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* php-pear/suhosin.gpg: added gpg key for suhosin
 	* libs/libmemcache: new spell, lib based on memcached
+	* http/xcache: new spell, php opcode cacher
 
 2007-12-09 George Sherwood <george@beernabeer.com>
 	* http/webkitgtk: New spell, web browser engine
