--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* php-pear/suhosin.gpg: added gpg key for suhosin
 	* libs/libmemcache: new spell, lib based on memcached
 	* http/xcache: new spell, php opcode cacher
+	* php-pear/suhosin: new spell, suhosin security extension for php
 
 2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel/bzr-gtk: new spell, pygtk2 GUI for Bazaar VCS
