--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* php-pear/suhosin.gpg: added gpg key for suhosin
 	* libs/libmemcache: new spell, lib based on memcached
 	* http/xcache: new spell, php opcode cacher
+	* php-pear/suhosin: new spell, suhosin security extension for php
 
 2007-12-09 George Sherwood <george@beernabeer.com>
 	* http/webkitgtk: New spell, web browser engine
