--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* libs/libmemcache: new spell, lib based on memcached
 	* http/xcache: new spell, php opcode cacher
 	* php-pear/suhosin: new spell, suhosin security extension for php
+	* perl-cpan/embed-persistent: new spell, embed-persistent from extutils
 
 2007-12-09 George Sherwood <george@beernabeer.com>
 	* http/webkitgtk: New spell, web browser engine
