--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* libs/libmemcache: new spell, lib based on memcached
 	* http/xcache: new spell, php opcode cacher
 	* php-pear/suhosin: new spell, suhosin security extension for php
+	* perl-cpan/embed-persistent: new spell, embed-persistent from extutils
 
 2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel/bzr-gtk: new spell, pygtk2 GUI for Bazaar VCS
