--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* http/xcache: new spell, php opcode cacher
 	* php-pear/suhosin: new spell, suhosin security extension for php
 	* perl-cpan/embed-persistent: new spell, embed-persistent from extutils
+	* perl-cpan/fcgi: new spell, fastcgi module
 
 2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
 	* python-devel/bzr-gtk: new spell, pygtk2 GUI for Bazaar VCS
