--- a/editors/leafpad/HISTORY
+++ b/editors/leafpad/HISTORY
@@ -1,3 +1,7 @@
+2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.8.13
+	  fixed long description wrap
+
 2007-11-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated to 0.8.12
 
