--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* php-pear/suhosin: new spell, suhosin security extension for php
 	* perl-cpan/fcgi: new spell, fastcgi module
 	* utils/hi-client: new spell, h-inventory client
+	* perl-cpan/extutils-embed: new spell, utilities to embed perl into C/C++
 
 2007-12-09 George Sherwood <george@beernabeer.com>
 	* http/webkitgtk: New spell, web browser engine
