--- a/perl-cpan/cgi-speedycgi/HISTORY
+++ b/perl-cpan/cgi-speedycgi/HISTORY
@@ -1,3 +1,7 @@
+2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: wrong SPELL name
+	* PRE_BUILD: don't wait till infinity
+
 2007-05-11 Colin "Phoul" Childs <phoul@sourcemage.org>
 	* DETAILS: Added $PERL_CPAN_URL
 
