--- a/gnome2-libs/vte/HISTORY
+++ b/gnome2-libs/vte/HISTORY
@@ -1,3 +1,6 @@
+2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.16.10
+
 2007-09-21 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.16.9
 
