--- a/kde-apps/digikam/HISTORY
+++ b/kde-apps/digikam/HISTORY
@@ -1,3 +1,6 @@
+2007-12-15 Treeve Jelbert <treevesourcemage.org>
+	* DEPENDS: remove kdebase; kdelibs is enough
+
 2007-12-08 Treeve Jelbert <treevesourcemage.org>
 	* DETAILS: version 0.9.3-rc1 (devel)
 
