--- a/archive/p7zip/HISTORY
+++ b/archive/p7zip/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.57
+
 2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: fixed man installation path
