--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-16  Treeve Jelbert <treeve@sourcemage.org>
+	* move database/knoda to kde-apps/knoda
+	* move database/knorr.gpg to higher level
+
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* php-pear/suhosin.gpg: added gpg key for suhosin
 	* libs/libmemcache: new spell, lib based on memcached
