--- a/kde-apps/knoda/HISTORY
+++ b/kde-apps/knoda/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: kdebase -> kdelibs
+
 2006-12-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.3
 
