update kde3 build process

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 2007-12-16  Treeve Jelbert <treeve@sourcemage.org>
 	* move database/knoda to kde-apps/knoda
 	* move database/knorr.gpg to higher level
+	* FUNCTIONS: add default_kde3_build
+	* kde-{apps,core}/FUNCTIONS: added
+	* kde-{apps,core}/KDE_BUILD: use default_kde3_build
+	
 
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* php-pear/suhosin.gpg: added gpg key for suhosin
