--- a/kde-core/arts/HISTORY
+++ b/kde-core/arts/HISTORY
@@ -1,3 +1,8 @@
+2007-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* BUILD: deleted
+	  now use default_kde3_build
+
 2007-10-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5.8
 
