--- a/kde-core/kdelibs/HISTORY
+++ b/kde-core/kdelibs/HISTORY
@@ -1,3 +1,8 @@
+2007-12-16  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* BUILD: deleted
+	  use default_kde3_build
+
 2007-10-16  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.5.8
 	* PRE_BUILD, *.diff: deleted, already applied
