--- a/disk/k3b/HISTORY
+++ b/disk/k3b/HISTORY
@@ -1,4 +1,7 @@
-2007-11-03Treeve Jelbert <treeve@sourcemage.org>
+2007-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD: use default_kde3_build
+
+2007-11-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: Updated to 1.0.4
 
 2007-07-23 Treeve Jelbert <treeve@sourcemage.org>
