--- a/disk/k3b-i18n/HISTORY
+++ b/disk/k3b-i18n/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD: added, use default_kde3_build
+
 2007-22-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.4
 
