--- a/audio-players/amarok/HISTORY
+++ b/audio-players/amarok/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD: use default_kde3_build
+
 2007-08-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* TRIGGERS: added flac
 
