--- a/video/kmplayer/HISTORY
+++ b/video/kmplayer/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD: use default_kde3_build
+
 2007-10-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.10.0a
 
