--- a/http/eruby/HISTORY
+++ b/http/eruby/HISTORY
@@ -1,3 +1,7 @@
+2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: converted to upstream signature checking
+	* 718329DC.gpg: added gpg keyring
+
 2006-11-24 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* CONFIGURE, BUILD: added UTF-8 support
 
