--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-16 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* libs/libfcgi: new spell, fastcgi development kit
+
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* php-pear/suhosin.gpg: added gpg key for suhosin
 	* libs/libmemcache: new spell, lib based on memcached
