--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-12-16 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* libs/libfcgi: new spell, fastcgi development kit
 	* libs/ruby-mmap: new spell, ruby mmap support
+	* libs/ruby-fcgi: new spell, ruby libfcgi bindings
 
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* php-pear/suhosin.gpg: added gpg key for suhosin
