video/gnome-mplayer: new spell, gnome mplayer frontend

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* libs/libfcgi: new spell, fastcgi development kit
 	* libs/ruby-mmap: new spell, ruby mmap support
 	* libs/ruby-fcgi: new spell, ruby libfcgi bindings
+	* video/gnome-mplayer: new spell, gnome mplayer frontend
 
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* php-pear/suhosin.gpg: added gpg key for suhosin
