--- a/graphics/gimp/HISTORY
+++ b/graphics/gimp/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.4.3
+
 2007-11-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.2
 
