--- a/shell-term-fm/sakura/HISTORY
+++ b/shell-term-fm/sakura/HISTORY
@@ -1,3 +1,6 @@
+2007-12-17 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS: updated spell to 1.3.0
+
 2007-09-11 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 1.2.1
 
