ion3: moved spell to z-rejected/z-windowmanagers

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-16 Arjan Bouter <abouter@sourcemage.org>
+	* windowmanagers/ion3: moved spell to z-rejected/z-windowmanagers
+
 2007-12-16 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* libs/libfcgi: new spell, fastcgi development kit
 	* libs/ruby-mmap: new spell, ruby mmap support
