--- a/database/tokyocabinet/HISTORY
+++ b/database/tokyocabinet/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.3
+
 2007-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.1
 	* PRE_BUILD: fix compile flags
