php: minor mistake in PRE_BUILD

--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* PRE_BUILD: minor mistake
+
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* PRE_BUILD: added for suhosin
 	* CONFIGURE: added suhosin option
