bluez-utils : updated version to 3.23

--- a/utils/bluez-utils/HISTORY
+++ b/utils/bluez-utils/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.23
+
 2007-10-31 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.22
 
