k9copy: updated to version 1.2.1

--- a/kde-apps/k9copy/HISTORY
+++ b/kde-apps/k9copy/HISTORY
@@ -1,3 +1,6 @@
+2007-12-17 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated spell to 1.2.1
+
 2007-11-01 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated spell to 1.2.0
 
