--- a/gnome2-apps/gcstar/HISTORY
+++ b/gnome2-apps/gcstar/HISTORY
@@ -1,3 +1,6 @@
+2007-12-16 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.3.1
+
 2007-12-01 Robin Cook <rcook@wyrms.net>
 	* DEPENDS: added depends of perl, html-parser, perl-libnet, uri, and 
 	  xml-parser-expat
