--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-17 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* http/galeon2: removed deprecated spell
+
 2007-12-16 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/ion3: moved spell to z-rejected/z-windowmanagers
 
