--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,6 @@
+2007-12-17 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.0.15
+
 2007-12-09 George Sherwood <george@beernabeer.com>
 	* DEPENDS, DETAILS: spell created
 
