--- a/antivirus/clamav/HISTORY
+++ b/antivirus/clamav/HISTORY
@@ -1,3 +1,6 @@
+2007-12-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.92
+
 2007-09-08 Treeve Jelbert <treeve@sourcemage.org>
 	* PRE_REMOVE: fix bug #13983
 
