claws-mail-extra-plugins 3.2.0

--- a/mail/claws-mail-extra-plugins/HISTORY
+++ b/mail/claws-mail-extra-plugins/HISTORY
@@ -1,3 +1,6 @@
+2007-12-17 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.2.0
+
 2007-11-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.1.0
 	* CONFIGURE: added new tnef_parse plugin
