--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,6 @@
+2007-12-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.5
+
 2007-11-11 David Kowis <dkowis@shlrm.org>
 	* BUILD was very much broke. Not sure if it's even the right spot
 	  for what's there.
