--- a/video-libs/swfdec/HISTORY
+++ b/video-libs/swfdec/HISTORY
@@ -1,3 +1,6 @@
+2007-12-18 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DETAILS: updated to 0.5.5
+
 2007-11-25 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 0.5.4
 
