swfdec-gnome: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-18 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* video/swfdec-gnome: new spell, thumbnailer and standalone flash
+	  player
+
 2007-12-17 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* http/galeon2: removed deprecated spell
 
