--- a/audio-libs/libdca/HISTORY
+++ b/audio-libs/libdca/HISTORY
@@ -1,2 +1,6 @@
+2007-12-18 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated spell to version 0.0.5, removed SOURCE_DIRECTORY
+	  as it's not needed anymore, switched SOURCE from tar.gz to tar.bz2
+
 2007-09-29 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS, CONFLICTS: created the spell
