mobile/rutilt: new spell a Gtk+ program designed to set up any wireless network interface

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-18 Ladislav Hagara <hgr@vabo.cz>
+	* mobile/rutilt: new spell
+	  a Gtk+ program designed to set up any wireless network interface
+
 2007-12-18 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* video/swfdec-gnome: new spell, thumbnailer and standalone flash
 	  player
