--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,7 @@
+2007-12-18 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.99.7, SECURITY_PATCH=6
+	  http://www.wireshark.org/security/wnpa-sec-2007-03.html
+
 2007-07-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.99.6, SECURITY_PATCH=5
 	  http://www.wireshark.org/security/wnpa-sec-2007-02.html
