--- a/video/avidemux2/HISTORY
+++ b/video/avidemux2/HISTORY
@@ -1,3 +1,6 @@
+2007-12-19 Julien "_kaze_" ROZO <julien@rozo.org>
+	* PRE_BUILD, gcc-4-2.patch: added patch to compile with gcc 4.2.x
+
 2006-12-03 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 2.3.0
 
