--- a/audio-soft/asunder/HISTORY
+++ b/audio-soft/asunder/HISTORY
@@ -1,2 +1,6 @@
+2007-12-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: Changed SOURCE_URL[0] extension,
+	  updated spell to 1.0, hash => gpg
+
 2007-11-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS, HISTORY: spell created
