ferm: new spell, tool to maintain complex firewalls written in perl

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-20 Vlad Glagolev <stealth@sourcemage.org>
+	* net/ferm: new spell, tool to maintain complex firewalls written in perl
+
 2007-12-18 Ladislav Hagara <hgr@vabo.cz>
 	* mobile/rutilt: new spell
 	  a Gtk+ program designed to set up any wireless network interface
