--- a/net/ferm/INSTALL
+++ b/net/ferm/INSTALL
@@ -1,5 +1,5 @@
 make install &&
 if [[ $INIT_INSTALLED ]]; then
-  install_config_file ${SCRIPT_DIRECTORY}/init.d/ferm.conf \
+  install_config_file $SCRIPT_DIRECTORY/init.d/ferm.conf \
     $INSTALL_ROOT/etc/sysconfig/ferm
 fi
