--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2007-12-20 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated devel to version 3.0 beta 2
+
 2007-12-02 George Sherwood <george@beernabeer.com>
 	* DEPENDS: Cleaned up. 3.0 beta cannot use system npsr, nss.
 	  depends python. Cleaned up extra &&
