--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,6 @@
+2007-12-20 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.4.10
+
 2007-12-02 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to verison 1.4.9
 
