libpng: Updated apng patch for 1.2.24

--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,8 @@
+2007-12-20 George Sherwood <george@beernabeer.com>
+	* PRE_BUILD: Update apng patch to 1.2.24
+	* libpng-1.2.23-apng.patch: removed
+	* libpng-1.2.24-apng.patch: Added
+
 2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.24
 
