--- a/graphics/gbdfed/HISTORY
+++ b/graphics/gbdfed/HISTORY
@@ -1,3 +1,8 @@
+2007-12-20 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3, cleaned up,
+	  corrected license, hash => gpg
+	* DEPENDS: cleaned up
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
