midori: Added optional_depends gnome-icon-theme to have the complete set of needed icons.

--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,6 @@
+2007-12-20 George Sherwood <geroge@beernabeer.com>
+	* DEPENDS: optional_depends gnome-icon-theme to have all icons present
+
 2007-12-17 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.0.15
 
