--- a/chat-irc/bitlbee/HISTORY
+++ b/chat-irc/bitlbee/HISTORY
@@ -1,3 +1,6 @@
+2007-12-20 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated devel to version 1.1.1dev
+
 2007-09-02 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated stable to version 1.0.4
 
