--- a/crypto/gnupg/HISTORY
+++ b/crypto/gnupg/HISTORY
@@ -1,3 +1,6 @@
+2007-12-20 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.4.8
+
 2007-03-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.7, SECURITY_PATCH=6
 	  http://lists.gnupg.org/pipermail/gnupg-announce/2007q1/000251.html
