--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-20 Pol Vinogradov <vin.public@gmail.com>
+	* http/icecat: new spell, the GNU version of the Firefox browser
+
 2007-12-18 Ladislav Hagara <hgr@vabo.cz>
 	* mobile/rutilt: new spell
 	  a Gtk+ program designed to set up any wireless network interface
