--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,6 @@
+2007-12-20 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.1.8
+
 2007-10-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.1.7
 
