http/iceweasel: deprecated in favour of icecat

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-12-20 Pol Vinogradov <vin.public@gmail.com>
 	* http/icecat: new spell, the GNU version of the Firefox browser
+	* http/iceweasel: deprecated in favour of icecat
 
 2007-12-18 Ladislav Hagara <hgr@vabo.cz>
 	* mobile/rutilt: new spell
