--- a/http/iceweasel/HISTORY
+++ b/http/iceweasel/HISTORY
@@ -1,3 +1,6 @@
+2007-12-20 Pol Vinogradov <vin.public@gmail.com>
+	* Deprecated in favour of icecat
+
 2007-10-30 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS, iceweasel.gpg: added GPG upstream signature
 
