--- a/database/flamerobin/HISTORY
+++ b/database/flamerobin/HISTORY
@@ -1,3 +1,6 @@
+2007-23-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.3
+
 2007-10-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.1
 	* BUILD: make configure executable
