virtualbox: added sdl and X11-LIBS as dependencies, added a patch to solve compilation issue with libxcursor from xorg-modular grimoire

--- a/utils/virtualbox/HISTORY
+++ b/utils/virtualbox/HISTORY
@@ -1,3 +1,8 @@
+2007-12-20 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DEPENDS: added sdl and X11-LIBS as dependencies
+	* BUILD, Xcursor.patch: added a patch to solve compilation issue with
+	  libxcursor from xorg-modular grimoire
+
 2007-10-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.5.2
 
