--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: update prerelease to 4.4.0-tp1
+
 2007-12-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: update snapshot to 4.3.4
 
