--- a/audio-players/amarok/HISTORY
+++ b/audio-players/amarok/HISTORY
@@ -1,3 +1,6 @@
+2007-12-21 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 1.4.8
+
 2007-12-16 Treeve Jelbert <treeve@sourcemage.org>
 	* BUILD: use default_kde3_build
 
