sqlite: fixed tcl dep via the official patch

--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,8 @@
+2007-12-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* PRE_BUILD: fixed --disable-tcl for `optionality' fith offpatch
+	* DEPENDS: tcl is optional again
+
 2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.5.4, cleaned up, PATCHLEVEL++
 	* DEPENDS: readline => optional, tcl => required
