--- a/python-devel/dabo/HISTORY
+++ b/python-devel/dabo/HISTORY
@@ -1,3 +1,7 @@
+2007-12-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.3
+	  new url
+
 2007-11-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.2
 	* PRE_BUILD, setup.diff: deleted
