burn-cd: new spell, handy frontend for cdrtools & dvd+rw-tools written in Python

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* disk/burn-cd: new spell, handy console-based frontend for the
+	  cdrtools/cdrkit and the dvd+rw-tools for easy burning of the
+	  single & multi session CD/DVD disks
+
 2007-12-20 Pol Vinogradov <vin.public@gmail.com>
 	* http/icecat: new spell, the GNU version of the Firefox browser
 	* http/iceweasel: deprecated in favour of icecat
