thunar: added missing dep

--- a/xfce/thunar/HISTORY
+++ b/xfce/thunar/HISTORY
@@ -1,3 +1,6 @@
+2007-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added req dep -- desktop-file-utils, cleaned up
+
 2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: refixed SOURCE_URL, gurus => upstream
 
