--- a/libs/libsigc++3/HISTORY
+++ b/libs/libsigc++3/HISTORY
@@ -1,3 +1,7 @@
+2007-12-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[1]
+	  updated spell to 2.0.18
+
 2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
 	* DETAILS: (automated) Add KEYWORDS
 
