--- a/http/bluefish/HISTORY
+++ b/http/bluefish/HISTORY
@@ -1,3 +1,6 @@
+2007-12-22 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated devel to version 1.1.5. Fixed devel SOURCE_URL[1]
+
 2007-04-01 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated unstable to version 1.1.3
 
