--- a/python-devel/matplotlib/HISTORY
+++ b/python-devel/matplotlib/HISTORY
@@ -1,3 +1,6 @@
+2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.91.1
+
 2006-10-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.87.7
 
