--- a/devel/rubygems/HISTORY
+++ b/devel/rubygems/HISTORY
@@ -1,3 +1,6 @@
+2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.1
+
 2007-08-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.4
 
