--- a/devel/rake/HISTORY
+++ b/devel/rake/HISTORY
@@ -1,3 +1,6 @@
+2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.0
+
 2007-08-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.3
 
