--- a/python-devel/turbokid/HISTORY
+++ b/python-devel/turbokid/HISTORY
@@ -1,3 +1,6 @@
+2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.4
+
 2007-09-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.3
 
