--- a/disk/udev/HISTORY
+++ b/disk/udev/HISTORY
@@ -1,3 +1,7 @@
+2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 118
+	* init.d/coldplug: convert to udevadm usage
+
 2007-10-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 116
 
