--- a/python-devel/beautifulsoup/HISTORY
+++ b/python-devel/beautifulsoup/HISTORY
@@ -1,3 +1,7 @@
+2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0.5
+	  LICENSE = BSD
+
 2007-07-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.4
 
