--- a/python-devel/kaa-base/HISTORY
+++ b/python-devel/kaa-base/HISTORY
@@ -1,3 +1,6 @@
+2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.0
+
 2007-04-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.1.3
 
