--- a/video/freevo/HISTORY
+++ b/video/freevo/HISTORY
@@ -1,3 +1,7 @@
+2007-12-222 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.5
+	* DEPENDS: remove pysqlite, now part of python
+
 2007-08-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.3
 	* volatiles, configs: added
