kde4 no longer experimental

--- a/kde4/HISTORY
+++ b/kde4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-23 Treeve Jelbert <treeve@sourcemage.org>
+	* KDE_CONFIGURE: remove warning message
+
 2007-11-07 Treeve Jelbert <treeve@sourcemage.org>
 	* KDE_DEPENDS: group all qt4 subdepends
 
