--- a/perl-cpan/xml-twig/HISTORY
+++ b/perl-cpan/xml-twig/HISTORY
@@ -1,3 +1,6 @@
+2007-12-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.32
+
 2007-06-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.29
 
