--- a/python-devel/dabo/HISTORY
+++ b/python-devel/dabo/HISTORY
@@ -1,3 +1,6 @@
+2007-12-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: remove pysqlite, now part of python
+
 2007-12-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.3
 	  new url
