--- a/kde-apps/digikam/HISTORY
+++ b/kde-apps/digikam/HISTORY
@@ -1,3 +1,7 @@
+2007-12-23 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: version 0.9.3 (devel & stable)
+	* PRE_BUILD, lcmsprf.h: removed, not needed anymore
+
 2007-12-15 Treeve Jelbert <treevesourcemage.org>
 	* DEPENDS: remove kdebase; kdelibs is enough
 
