--- a/net/iptables/HISTORY
+++ b/net/iptables/HISTORY
@@ -1,3 +1,6 @@
+2007-12-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.0
+
 2007-09-13 David Kowis <dkowis@shlrm.org>
 	* DETAILS: grsec patch to 1.3.5
 	* PREPARE: removed
