--- a/devel/mono/HISTORY
+++ b/devel/mono/HISTORY
@@ -1,3 +1,7 @@
+2007-12-23 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.2.6
+	* BUILD: Needs to specify --with-tls=pthreads for x86
+
 2007-11-07 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to verison 1.2.5.2
 
