beagle: Added upstream patch to build with mono 1.2.6

--- a/utils/beagle/HISTORY
+++ b/utils/beagle/HISTORY
@@ -1,3 +1,7 @@
+2007-12-23 George Sherwood <george@beernabeer.com>
+	* PRE_BUILD: Added to apply patch
+	* mono-1.2.6.patch: Added upstream patch to build with mono 1.2.6
+
 2007-12-11 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.3.1
 
