ferm: fix small iptables issue

--- a/net/ferm/HISTORY
+++ b/net/ferm/HISTORY
@@ -1,3 +1,6 @@
+2007-12-23 Vlad Glagolev <stealth@sourcemage.org>
+	* init.d/ferm: fix iptables issue for preloading kernel module
+
 2007-12-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS, INSTALL, BUILD, PRE_BUILD, init.d: spell created,
 	  init.d/ferm.conf is basic and doesn't need anything more than this
