--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2007-12-23 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS, CONFIGURE, DEPENDS, BUILD: bump to 1.0.0
+
 2007-11-08 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: bump to 0.68
 
