--- a/audio-players/alsaplayer/HISTORY
+++ b/audio-players/alsaplayer/HISTORY
@@ -1,3 +1,7 @@
+2007-12-04 Juuso Alasuutari <iuso@sourcemage.org>
+	* alsaplayer_jackdmp.patch, PRE_BUILD: Added patch to fix jackdmp
+	  compatibility.
+
 2007-11-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.99.80
 
