--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-23 Julien "_kaze_" ROZO <julien@rozo.org>
+	* collab/qsvn: new spell, a graphical Subversion client based on qt4
+	* kde-look/FUNCTIONS: added
+	* kde-look/KDE_BUILD: use default_kde3_build
+	
 2007-12-22 Vlad Glagolev <stealth@sourcemage.org>
 	* disk/burn-cd: new spell, handy console-based frontend for the
 	  cdrtools/cdrkit and the dvd+rw-tools for easy burning of the
