--- a/mail/sylpheed/HISTORY
+++ b/mail/sylpheed/HISTORY
@@ -1,3 +1,7 @@
+2007-12-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[1]
+	  updated SYLPHEED_GTK2=y to 2.4.8
+
 2007-11-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* CONFIGURE: added no-useragent option
