--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2007-12-24 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 6.3.7-7
+
 2007-12-17 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 6.3.7-5
 
