linux-fusion: new spell, IPC API for DirectFB

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-24 Arjan Bouter <abouter@sourcemage.org>
+	* kernels/linux-fusion: new spell, IPC API for DirectFB
+
 2007-12-23 Julien "_kaze_" ROZO <julien@rozo.org>
 	* collab/qsvn: new spell, a graphical Subversion client based on qt4
 	* kde-look/FUNCTIONS: added
