libs/mcs -> libs/libmcs: renaming, started deprecation (upstream name is libmcs, not mcs)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-24 Elisamuel Resto <ryuji@sourcemage.org>
+	* libs/mcs -> libs/libmcs: renamed.
+
 2007-12-24 Arjan Bouter <abouter@sourcemage.org>
 	* kernels/linux-fusion: new spell, IPC API for DirectFB
 	* display/splashy: new spell, userspace bootsplash app
