libs/libmowgli: new spell, a development framework for C

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-12-24 Elisamuel Resto <ryuji@sourcemage.org>
 	* libs/mcs -> libs/libmcs: renamed.
+	* libs/libmowgli: new spell, a development framework for C
 
 2007-12-24 Arjan Bouter <abouter@sourcemage.org>
 	* kernels/linux-fusion: new spell, IPC API for DirectFB
