audio-players/audacious-plugins: moved to audio-plugins section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2007-12-24 Elisamuel Resto <ryuji@sourcemage.org>
 	* libs/mcs -> libs/libmcs: renamed.
 	* libs/libmowgli: new spell, a development framework for C
+	* audio-players/audacious-plugins: moved to audio-plugins section
 
 2007-12-24 Arjan Bouter <abouter@sourcemage.org>
 	* kernels/linux-fusion: new spell, IPC API for DirectFB
