python: added gettext tools + PATCHLEVEL+=1

--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -3,6 +3,7 @@
 	  include all files from the pythonic modules/apps in site-packages:
 	  we MUST dispell every python-based spell on recasting python, and
 	  every python-based module/app MUST be recompiled -- only by its setup
+	* INSTALL: added gettext tools
 
 2007-06-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: fix minor typo, bug #13798
