--- a/devel/python/INSTALL
+++ b/devel/python/INSTALL
@@ -3,4 +3,8 @@ default_install &&
 if [ -f $SOURCE_DIRECTORY/spell-tmp/pydcop.py ]; then
   mv $SOURCE_DIRECTORY/spell-tmp/pydcop.py \
     $INSTALL_ROOT/usr/lib/python${VERSION:0:3}
-fi
+fi &&
+
+# gettext
+install -m 755 $SOURCE_DIRECTORY/Tools/i18n/{pygettext.py,msgfmt.py} \
+  "$INSTALL_ROOT/usr/bin"
