nut: update to 2.2.0

--- a/utils/nut/HISTORY
+++ b/utils/nut/HISTORY
@@ -1,3 +1,11 @@
+2007-12-20 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* 204DDF1B.gpg: added gpg keyring
+	* DETAILS: Fixed SOURCE_URL[0]
+	  converted to upstream signature checking
+	  fixed long description wrap
+	  updated spell to 2.2.0
+	* BUILD: cleaned it up
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
