rssyslog: new spell, remote sysloging daemon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-26 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* utils/rssyslog: new spell, remote syslogging daemon
+
 2007-12-16 Arjan Bouter <abouter@sourcemage.org>
 	* windowmanagers/ion3: moved spell to z-rejected/z-windowmanagers
 
