xorg-server: update to 1.4.0.90, solves keyboard issues

--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,7 @@
+2007-12-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS: updated spell to 1.4.0.90
+	  fixed long description wrap
+
 2007-12-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* BUILD: correct some paths and fix XKB breakage
 	* PRE_BUILD: unpack into the SOURCE_DIRECTORY
