ftp/bnbt: added BNBT bittorrent tracker from Chris Dombroski #8633

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-26 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* ftp/bnbt: added BNBT bittorrent tracker from Chris Dombroski #8633
+
 2007-12-26 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* utils/rssyslog: new spell, remote syslogging daemon
 
