iceweasel: Corrected deprecation handling

--- a/http/iceweasel/HISTORY
+++ b/http/iceweasel/HISTORY
@@ -1,3 +1,17 @@
+2007-12-26 Juuso Alasuutari <iuso@sourcemage.org>
+	* PRE_BUILD, BUILD, INSTALL: Replaced commented-out lines with 'true'
+	  as dictated by the spell deprecation procedure.
+	* CONFIGURE: Deleted, not needed in a deprecated spell.
+	* PROVIDES: Removed comment characters. Commenting out lines in
+	  PROVIDES doesn't work because it's not a bash script; instead
+	  provides.index will claim that the spell provides '#'. Letting a
+	  deprecated spell keep its providers is probably the best thing to do
+	  to avoid forcing an unwanted recompile upon users.
+	* CONFLICTS: Added with 'conflicts iceweasel y' according to the spell
+	  deprecation procedure.
+	* EXPORTS, REPAIR^none^EXPORTS: Added, export variables for use in
+	  icecat's CONFIGURE.
+
 2007-12-20 Pol Vinogradov <vin.public@gmail.com>
 	* Deprecated in favour of icecat
 
