netstat-nat: added spell #8552

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-12-26 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* ftp/bnbt: added BNBT bittorrent tracker from Chris Dombroski #8633
+	* net/netstat-nat: added a NAT connection shower from Eduardo Tongson #8552
 
 2007-12-26 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* utils/rssyslog: new spell, remote syslogging daemon
