icecat: Import query defaults from deprecated iceweasel.

--- a/http/icecat/HISTORY
+++ b/http/icecat/HISTORY
@@ -1,3 +1,6 @@
+2007-12-26 Juuso Alasuutari <iuso@sourcemage.org>
+	* CONFIGURE: Import query defaults from deprecated iceweasel.
+
 2007-12-20 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD, cairo-fixes.patch, CONFIGURE, CONFLICTS, DEPENDS,
 	  desktop/icecat.desktop, DETAILS, icecat, icecat.sh,
