avahi: spell is now configured to use nogroup group instead of inexistent avahi one (fix bug #14184)

--- a/utils/avahi/HISTORY
+++ b/utils/avahi/HISTORY
@@ -1,6 +1,8 @@
 2007-12-27 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 0.6.21, removed PATCHLEVEL
 	* PRE_BUILD, dbus.patch: added patch to compile with dbus < 1.1.1
+	* BUILD: avahi is configured to use nogroup group instead of avahi one
+	  (fix bug #14184)
 
 2007-10-18 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Incremented PATCHLEVEL=1
