--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2007-12-28  Treeve Jelbert <treeve@sourcemage.org>
 	* printer/glabels: new spell, print labels 
+	* kde-apps/kvpnc: new spell, kde front end  for VPN
 
 2007-12-27 Julien "_kaze_" ROZO <julien@rozo.org>
 	* video/smplayer: new spell, a frontend for MPlayer based on QT4
