--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,7 @@
+2007-12-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[1], updated spell to 2.74,
+	  use UPSTREAM_KEY
+
 2007-12-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.73
 
