kde4 - update depends

--- a/kde4/HISTORY
+++ b/kde4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-29 Treeve Jelbert <treeve@sourcemage.org>
+	* KDE_DEPENDS: add libxtst for kdelibs4
+
 2007-12-23 Treeve Jelbert <treeve@sourcemage.org>
 	* KDE_CONFIGURE: remove warning message
 
