goffice-0.6: new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-29 Robin Cook <rcook@wyrms.net>
+	* gnome2-lib/goffice-0.6: new spell
+
 2007-12-28  Treeve Jelbert <treeve@sourcemage.org>
 	* printer/glabels: new spell, print labels 
 	* kde-apps/kvpnc: new spell, kde front end  for VPN
