libg15: New spell, a library for the Logitech G15 keyboard.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-30 Juuso Alasuutari <iuso@sourcemage.org>
+	* libs/libg15: New spell, a library for the Logitech G15 keyboard.
+
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* gnome2-lib/goffice-0.6: new spell
 
