g15composer: New spell, a command line interface to control the Logitech G15 keyboard's LCD.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	  buffers for use with libg15.
 	* utils/g15daemon: New spell, a daemon to control the Logitech G15
 	  keyboard.
+	* utils/g15composer: New spell, a command line interface to control
+	  the Logitech G15 keyboard's LCD.
 
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* gnome2-lib/goffice-0.6: new spell
