liferea: Added file to provide webkit fixes.  Removed original patch.

--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,8 @@
+2007-12-29 George Sherwood <george@beernabeer.com>
+	* PRE_BUILD: Removed patch.  Added new webkit.c file.
+	* webkit.c: Added.  Better then patching with all the changes.
+	* webkit-current-api-update.diff: Removed.
+
 2007-12-28 George Sherwood <george@beernabeer.com>
 	* DEPENDS: depends libglade2. optional_depends webkitgtk
 	* PRE_BUILD: Added to apply patch
