doc/mnemosyne: new spell, a flashcard memorization aid

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007-12-30 Remko van der Vossen <wich@sourcemage.org>
+	* doc/mnemosyne: new spell, a flashcard memorization aid
+
 2007-12-30 Juuso Alasuutari <iuso@sourcemage.org>
 	* libs/libg15: New spell, a library for the Logitech G15 keyboard.
 	* graphics-libs/libg15render: New spell, a library to render graphics
