gnumeric: updated to 1.8.0

--- a/gnome2-apps/gnumeric/HISTORY
+++ b/gnome2-apps/gnumeric/HISTORY
@@ -1,3 +1,12 @@
+2007-12-29 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.8.0
+	  removed 1.6 items
+	* DEPENDS: removed if statements
+	  changed goffice to 0.6
+	* PRE_BUILD: removed libgda patch and added omf patch
+	  http://bugzilla.gnome.org/show_bug.cgi?id=506335
+	  http://sources.gentoo.org/viewcvs.py/gentoo-x86/app-office/gnumeric/files/gnumeric-1.8.0-omf.patch?view=markup
+
 2007-12-05 George Sherwood <geroge@beernabeer.com>
 	* DETAILS: Updated VERSION to 1.7.91.
 	* PRE_BUILD: Removed incorporated patch.
