--- a/doc/man/HISTORY
+++ b/doc/man/HISTORY
@@ -1,3 +1,6 @@
+2008-01-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.6f
+
 2007-10-27 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* BUILD, PRE_BUILD: moved man.conf patching to PRE_BUILD
 	* DETAILS: PATCHLEVEL++
