--- a/disk/e2fsprogs/HISTORY
+++ b/disk/e2fsprogs/HISTORY
@@ -1,3 +1,6 @@
+2008-01-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.40.4
+
 2007-12-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.40.3
 	* BUILD, inc.diff: removed patch
