kconnections: simple KDE network connections monitor applet #14188 knemo: the KDE Network Monitor #14187 both spells from Ivan Lezhnjov Jr.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-01 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* kconnections: simple KDE network connections monitor applet #14188
+	* knemo: the KDE Network Monitor #14187; both spells from Ivan Lezhnjov Jr.
+
 2007-12-30 Remko van der Vossen <wich@sourcemage.org>
 	* doc/mnemosyne: new spell, a flashcard memorization aid
 
