burn-cd: small fix

--- a/disk/burn-cd/HISTORY
+++ b/disk/burn-cd/HISTORY
@@ -1,2 +1,5 @@
+2008-01-01 Vlad Glagolev <stealth@sourcemage.org>
+	* INSTALL: /bin => /usr/bin
+
 2007-12-22 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS, INSTALL, PRE_BUILD: spell created
