webkitgtk: => r29037, no more stupid qmake from qt4 .)

--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,6 +1,9 @@
+2008-01-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated to build 29037, cleaned up
+	* DEPENDS, BUILD, PRE_BUILD: qmake => autotools
+
 2007-12-14 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to build 28711
 
 2007-12-08 George Sherwood <george@beernabeer.com>
 	* DETAILS, DEPENDS, BUILD, INSTALL: spell created
-
