--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2007-10-22 Pol Vinogradov <vin.public@gmail.com>
+	* BUILD: changed iceweasel to icecat
+
 2007-11-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.8.6d
 
