gnome2-libs/librsvg2:
BUILD: replaced iceweasel to icecat

--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-02 Pol Vinogradov <vin.public@gmail.com>
+	* BUILD: replaced iceweasel to icecat
+
 2007-10-22 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD: install_rootifying nspr include path, added
 	  iceweasel support
