nas: versions 1.9.1 and 1.9a, added autostart from it's libs.

--- a/audio-drivers/nas/HISTORY
+++ b/audio-drivers/nas/HISTORY
@@ -1,3 +1,7 @@
+2008-01-03 Arjan Bouter <abouter@sourcemage.org
+	* DETAILS: version 1.9.1 and 1.9a
+	* CONFIGURE: added, optionally have the libs autostart the server
+
 2007-04-09 Arjan Bouter <abouter@sourcemage.org
 	* DETAILS: wrapped description line
 	* init.d/nasd: fixed nasd path
