nas: added missing dependencies #13343

--- a/audio-drivers/nas/HISTORY
+++ b/audio-drivers/nas/HISTORY
@@ -1,3 +1,6 @@
+2008-01-03 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: added missing dependencies #13343
+
 2008-01-03 Arjan Bouter <abouter@sourcemage.org
 	* DETAILS: version 1.9.1 and 1.9a
 	* CONFIGURE: added, optionally have the libs autostart the server
