fvwm: unstable version 2.5.24

--- a/windowmanagers/fvwm/HISTORY
+++ b/windowmanagers/fvwm/HISTORY
@@ -1,3 +1,6 @@
+2008-01-03 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: unstable version 2.5.24
+
 2007-10-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, PRE_BUILD: fetch patchset directly
 	* patches/BorderUnderTitle.patch.bz2,
