smgl/smgl-ledger: updated to 0.08

--- a/smgl/smgl-ledger/HISTORY
+++ b/smgl/smgl-ledger/HISTORY
@@ -1,3 +1,7 @@
+2008-01-04 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS, smgl-ledger: 0.08, appending grimoire name to every line
+	  in SPELLS section
+
 2007-08-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, smgl-ledger: 0.07, IP address has been changed
 
