--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,7 @@
+2008-01-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.00
+	* DEPENDS: cleaned up
+
 2007-12-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: fixed WEB_SITE
 
