sdl: => 1.2.13, added pulseaudio as opt dep

--- a/libs/sdl/HISTORY
+++ b/libs/sdl/HISTORY
@@ -1,3 +1,8 @@
+2008-01-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.13
+	* DEPENDS: added pulseaudio as optional
+	* PRE_BUILD: removed no-yasm patch
+
 2007-07-12 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: converted to upstream signature checking
 	* A7763BE6.gpg: added gpg keyring
