gbdfed: fixed small dev typo

--- a/graphics/gbdfed/HISTORY
+++ b/graphics/gbdfed/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* PRE_BUILD: fixed version in the sources
+
 2007-12-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3, cleaned up,
 	  corrected license, hash => gpg
