--- a/libs/sdl/HISTORY
+++ b/libs/sdl/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: fixed sig source url
+
 2008-01-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.13
 	* DEPENDS: added pulseaudio as optional
