--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to r29180
+
 2008-01-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to r29152
 
