goffice-0.6: apply patch that fixes the problem.

--- a/gnome2-libs/goffice-0.6/HISTORY
+++ b/gnome2-libs/goffice-0.6/HISTORY
@@ -1,3 +1,8 @@
+2008-01-04 Robin Cook <rcook@wyrms.net>
+	* DETAILS: PATCHLEVEL++
+	* PRE_BUILD: changed to patch that actually fixes the problem.
+	  http://bugzilla.gnome.org/show_bug.cgi?id=506506
+
 2008-01-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: fixed gtk-doc bug, until upstream fixes it properly
