sane-backends: /usr/doc => /usr/share/doc

--- a/graphics-libs/sane-backends/HISTORY
+++ b/graphics-libs/sane-backends/HISTORY
@@ -1,3 +1,8 @@
+2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* CONFIGURE: cleaned up
+	* BUILD: some doc dir was b0rked, fixed it
+
 2007-11-11 David Kowis <dkowis@shlrm.org>
 	* BUILD: broken again, due to incorrect usage of [ ]
 
