http/xcache: version update to 1.2.2; temporary INSTALL brokedness workaround (staging off)

--- a/http/xcache/INSTALL
+++ b/http/xcache/INSTALL
@@ -1,3 +1,7 @@
-default_install  &&
-cp xcache.ini $INSTALL_ROOT/usr/share/doc/xcache/ &&
-cp -r admin $INSTALL_ROOT/usr/share/doc/xcache/
+default_install &&
+
+if [[ "${GATHER_DOCS}" = "on" ]]; then
+  mkdir $INSTALL_ROOT/usr/share/doc/$SPELL/ &&
+  cp -v xcache.ini $INSTALL_ROOT/usr/share/doc/$SPELL/ &&
+  cp -av admin $INSTALL_ROOT/usr/share/doc/$SPELL/
+fi
