--- a/http/xcache/HISTORY
+++ b/http/xcache/HISTORY
@@ -1,2 +1,7 @@
+2008-01-05 Elisamuel Resto <ryuji@sourcemage.org>
+	* DETAILS: version updated to 1.2.2; temporary added STAGED_INSTALL=off
+	* INSTALL: install sample files only if user wants, create dir if not exists
+
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, DEPENDS, PRE_BUILD, BUILD, INSTALL, HISTORY: created spell
+
