--- a/python-devel/sqlalchemy/HISTORY
+++ b/python-devel/sqlalchemy/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.2a
+
 2008-01-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.4.2
 
