linux: small fix about mac80211 spell

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
+	* volatiles: added ^/boot/config-* (bug about mac80211 stealthy
+	  install procedure in FINAL)
+
 2007-12-23 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to 2.6.24-rc6-mm1
 	* info/patches/mm_patches/2.6.24-rc6-mm1: added
