net/iptables: added install make rule in INSTALL for development headers; TRACK_ROOT now used in BUILD

--- a/net/iptables/HISTORY
+++ b/net/iptables/HISTORY
@@ -1,3 +1,7 @@
+2008-01-05 Elisamuel Resto <ryuji@sourcemage.org>
+	* INSTALL: added install-devel and copying of headers
+	* BUILD: added $TRACK_ROOT to the make call
+
 2007-12-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.0
 
