perl: fixed a small bug about irssi-compatibility

--- a/perl-cpan/perl/HISTORY
+++ b/perl-cpan/perl/HISTORY
@@ -2,6 +2,8 @@
 	* DETAILS: updated spell to 5.10.0, hash => gpg
 	* DEPENDS, INSTALL, UP_TRIGGERS: cleaned up
 	* PRE_BUILD: no more needed
+	* INSTALL: added DynaLoader.a for the backward compatibility (only
+	  1 app affected -- irssi), but DynaLoader is compiled into libperl.so
 
 2007-06-19 Elisamuel Resto <ryuji@mages.ath.cx>
 	* PRE_BUILD: Added a patch to fix build with gcc-4.2.0 (Bug #13847)
