--- a/perl-cpan/perl/INSTALL
+++ b/perl-cpan/perl/INSTALL
@@ -1,6 +1,10 @@
 make install DESTDIR=$INSTALL_ROOT \
-INSTALLFLAGS="--man1dir=$INSTALL_ROOT/usr/share/man/man1 --man1ext=1 \
---man3dir=$INSTALL_ROOT/usr/share/man/man3 --man3ext=3" &&
+  INSTALLFLAGS="--man1dir=$INSTALL_ROOT/usr/share/man/man1 --man1ext=1 \
+  --man3dir=$INSTALL_ROOT/usr/share/man/man3 --man3ext=3" &&
+
+# for compatibility (irssi)
+install -m 644 $SPELL_DIRECTORY/DynaLoader.a \
+  $INSTALL_ROOT/usr/lib/perl5/$VERSION/*/auto/DynaLoader &&
 
 mkdir -p $INSTALL_ROOT/etc/profile.d &&
-install -m 0644 $SCRIPT_DIRECTORY/perl.sh $INSTALL_ROOT/etc/profile.d/perl.sh
+install -m 644 $SPELL_DIRECTORY/perl.sh $INSTALL_ROOT/etc/profile.d/perl.sh
