python: small fix, check for the src dir before the moving some stuff, not the dest one

--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,7 @@
+2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* FINAL: check for the src dir before, not the dest one
+
 2008-01-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* SUB_DEPENDS PRE_SUB_DEPENDS: add entries for db & sqlite
@@ -211,4 +215,3 @@
 
 2002-03-19 Julian v. Bock <julian@wongr.net>
 	* DETAILS: update version to 2.2.1c1.
-
