--- a/gnome2-libs/goffice-0.6/HISTORY
+++ b/gnome2-libs/goffice-0.6/HISTORY
@@ -1,5 +1,5 @@
 2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
-	* DETAILS: PATCHLEVEL++, fixed the patch
+	* DETAILS: PATCHLEVEL++, fixed the patch, twice
 
 2008-01-04 Robin Cook <rcook@wyrms.net>
 	* DETAILS: PATCHLEVEL++
