perl: moved into devel, fixed some small bugs

--- a/devel/perl/HISTORY
+++ b/devel/perl/HISTORY
@@ -4,6 +4,7 @@
 	* PRE_BUILD: no more needed
 	* INSTALL: added DynaLoader.a for the backward compatibility (only
 	  1 app affected -- irssi), but DynaLoader is compiled into libperl.so
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: made THREADED perl as sub dep
 
 2007-06-19 Elisamuel Resto <ryuji@mages.ath.cx>
 	* PRE_BUILD: Added a patch to fix build with gcc-4.2.0 (Bug #13847)
@@ -217,4 +218,3 @@
 
 2002-03-15 Lyon Lemmens <llemmens@sourcemage.org>
 	* HISTORY: New history
-
