Revert "perl: moved into devel, fixed some small bugs"
This reverts commit 23399e9fae5311971a2cfd64a7db84b77c85d86b.

--- a/perl-cpan/perl/INSTALL
+++ b/perl-cpan/perl/INSTALL
@@ -3,8 +3,8 @@ make install DESTDIR=$INSTALL_ROOT \
   --man3dir=$INSTALL_ROOT/usr/share/man/man3 --man3ext=3" &&
 
 # for compatibility (irssi)
-install -m 644 $SPELL_DIRECTORY/perl.dl \
-  $(ls -d $INSTALL_ROOT/usr/lib/perl5/$VERSION/*/auto/DynaLoader)/DynaLoader.a &&
+install -m 644 $SPELL_DIRECTORY/DynaLoader.a \
+  $INSTALL_ROOT/usr/lib/perl5/$VERSION/*/auto/DynaLoader &&
 
 mkdir -p $INSTALL_ROOT/etc/profile.d &&
 install -m 644 $SPELL_DIRECTORY/perl.sh $INSTALL_ROOT/etc/profile.d/perl.sh
