perl: moved to devel

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
 	* perl-cpan/MAINTAINER: add myself as maintainer
+	* perl-cpan/perl: moved to devel
 
 2008-01-06 Elisamuel Resto <ryuji@sourcemage.org>
 	* php-pear/MAINTAINER: I will be replacing Sergey for this section
